<resources>
    <string name="app_name">Asystent nauczyciela</string>
    <string name="subjects">Przedmioty</string>
    <string name="students">Uczniowie</string>
    <string name="marks">Oceny</string>
    <string name="report">Raport</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_name_tv">nazwa</string>
    <string name="save">Zapisz</string>
    <string name="lastName">Nazwisko</string>
    <string name="studentClass">Klasa</string>
    <string name="name">Imię</string>
</resources>